# deepagents

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  Makefile  README.md  action.yml  release-please-config.json
examples/async-subagent-server/: .env.example  README.md  pyproject.toml  server.py  supervisor.py  test_server.py
examples/content-builder-agent/: pyproject.toml
examples/content-builder-agent/skills/social-media/: SKILL.md
examples/deep_research/: README.md  pyproject.toml
examples/nvidia_deep_agent/: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml
examples/nvidia_deep_agent/skills/cudf-analytics/: SKILL.md
examples/nvidia_deep_agent/skills/cuml-machine-learning/: SKILL.md
examples/nvidia_deep_agent/skills/data-visualization/: SKILL.md
examples/nvidia_deep_agent/skills/gpu-document-processing/: SKILL.md
examples/nvidia_deep_agent/src/: AGENTS.md  agent.py  backend.py  prompts.py  tools.py
examples/text-to-sql-agent/: pyproject.toml
examples/text-to-sql-agent/skills/query-writing/: SKILL.md
examples/text-to-sql-agent/skills/schema-exploration/: SKILL.md
libs/acp/: .env.example  Makefile  README.md  pyproject.toml  run_demo_agent.sh
libs/acp/deepagents_acp/: __init__.py  __main__.py  server.py  utils.py
libs/acp/examples/: __init__.py  demo_agent.py  local_context.py
libs/acp/tests/: test_agent.py  test_command_allowlist.py  test_main.py  test_model_switching.py  test_utils.py
libs/cli/: CHANGELOG.md  DEV.md  Makefile  README.md  THREAT_MODEL.md  pyproject.toml
libs/cli/deepagents_cli/: __init__.py  _ask_user_types.py  _cli_context.py  _debug.py  _env_vars.py  _server_config.py  _server_constants.py  _session_stats.py  _testing_models.py  _version.py  agent.py  app.py  app.tcss  ask_user.py  clipboard.py  command_registry.py  config.py  configurable_model.py  default_agent_prompt.md  editor.py  file_ops.py  formatting.py  hooks.py  input.py  local_context.py  main.py  mcp_tools.py  mcp_trust.py  media_utils.py  model_config.py  non_interactive.py  offload.py  output.py  project_utils.py  remote_client.py  server.py  server_graph.py  server_manager.py  sessions.py  system_prompt.md  (+8 more)
libs/cli/deepagents_cli/built_in_skills/: __init__.py
libs/cli/deepagents_cli/integrations/: __init__.py  daytona.py  langsmith.py  modal.py  runloop.py  sandbox_factory.py  sandbox_provider.py
libs/cli/deepagents_cli/skills/: __init__.py  commands.py  load.py
libs/cli/deepagents_cli/widgets/: __init__.py  _links.py  approval.py  ask_user.py  autocomplete.py  chat_input.py  diff.py  history.py  loading.py  mcp_viewer.py  message_store.py  messages.py  model_selector.py  status.py  theme_selector.py  thread_selector.py  tool_renderers.py  tool_widgets.py  welcome.py
libs/cli/scripts/: install.sh
libs/cli/tests/integration_tests/: test_acp_mode.py  test_compact_resume.py  test_sandbox_factory.py  test_sandbox_operations.py
libs/cli/tests/unit_tests/: conftest.py  test_agent.py  test_agent_friendly.py  test_app.py  test_approval.py  test_args.py  test_ask_user.py  test_ask_user_middleware.py  test_autocomplete.py  test_charset.py  test_chat_input.py  test_command_registry.py  test_compact.py  test_compact_tool.py  test_config.py  test_configurable_model.py  test_debug.py  test_editor.py  test_end_to_end.py  test_env_vars.py  test_exception_handling.py  test_history.py  test_hooks.py  test_imports.py  test_input_parsing.py  test_links.py  test_local_context.py  test_main.py  test_main_acp_mode.py  test_main_args.py  test_mcp_tools.py  test_mcp_trust.py  test_mcp_viewer.py  test_media_utils.py  test_message_store.py  test_messages.py  test_model_config.py  test_model_selector.py  test_model_switch.py  test_non_interactive.py  (+23 more)
libs/deepagents/: Makefile  THREAT_MODEL.md  pyproject.toml
libs/deepagents/deepagents/: __init__.py  _models.py  _version.py  base_prompt.md  graph.py
libs/deepagents/deepagents/backends/: __init__.py  composite.py  filesystem.py  langsmith.py  local_shell.py  protocol.py  sandbox.py  state.py  store.py  utils.py
libs/deepagents/deepagents/middleware/: __init__.py  async_subagents.py  filesystem.py  memory.py  patch_tool_calls.py  skills.py  subagents.py  summarization.py
libs/deepagents/tests/: README.md  utils.py
libs/deepagents/tests/benchmarks/: test_benchmark_create_deep_agent.py
libs/deepagents/tests/evals/: conftest.py  pytest_reporter.py  test_file_operations.py  test_hitl.py  test_memory.py  test_skills.py  test_subagents.py  test_summarization.py  test_system_prompt.py  test_tool_usage_relational.py  utils.py
libs/deepagents/tests/integration_tests/: test_deepagents.py  test_filesystem_middleware.py  test_langsmith_sandbox.py  test_subagent_middleware.py
libs/deepagents/tests/unit_tests/: chat_model.py  test_async_subagents.py  test_benchmark_create_deep_agent.py  test_end_to_end.py  test_file_system_tools.py  test_graph.py  test_local_shell.py  (+6 more)
libs/evals/: EVAL_CATALOG.md  MODEL_GROUPS.md  Makefile  README.md  pyproject.toml
libs/evals/deepagents_evals/: __init__.py  categories.json  radar.py
libs/evals/deepagents_harbor/: __init__.py  backend.py  deepagents_wrapper.py  failure.py  langsmith.py  metadata.py  stats.py
libs/evals/docs/: plan-evals-cli-mode.md
libs/evals/scripts/: analyze.py  generate_eval_catalog.py  generate_model_groups.py  generate_radar.py  harbor_langsmith.py
libs/harbor/: Makefile  pyproject.toml
libs/harbor/deepagents_harbor/: __init__.py  backend.py  deepagents_wrapper.py
libs/partners/quickjs/: Makefile  README.md  pyproject.toml
libs/skills_agent/: PACKAGING.md  README.md  main.py  pyproject.toml  test_doc.md
libs/skills_agent/skills_agent/: __init__.py  api_doc.md  config.example.yaml  examples.py  exceptions.py  executor.py  graph.py  llm.py  loader.py  log.py  models.py  reference.py  run_tests.py
libs/skills_agent/skills_agent_v2/: README.md  config.py  executor.py  graph.py  loader.py  log.py  models.py  run_tests.py  state.py
libs/skills_agent/tests/: test_event_doc_parser.py  test_logging_fix.py
(+206 files in other folders)
