[project]
name = "nemotron-deep-agent"
version = "0.1.0"
description = "General-purpose deep agent: frontier orchestrator + Nemotron Super subagents + NVIDIA GPU skills"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.3.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langgraph>=0.4.0",
    "tavily-python>=0.5.0",
    "httpx>=0.28.0",
    "markdownify>=1.2.0",
    "python-dotenv>=1.0.0",
    "langgraph-cli[inmem]>=0.1.55",
    "modal>=0.73.0",
    "langchain-modal>=0.0.2",
    "langchain-nvidia-ai-endpoints>=1.1.0",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
