[project]
name = "skills-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "instructor>=1.14.5",
    "langchain>=1.2.9",
    "langchain-anthropic>=1.3.2",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.8",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
]
